--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site settings
-title: "Jekyll Resume Template"
-description: "A resume template for Jekyll and GitHub Pages sites."
+title: " Resume Template"
+description: "A resume template for GitHub Pages sites."
 
 # Build settings
 markdown: kramdown
@@ -9,12 +9,12 @@ sass:
   style: compressed
 
 # Resume settings
-resume_avatar:                  "true"
-resume_name:                    "Homer J. Simpson"
-resume_title:                   "Nuclear Safety Inspector"
+resume_avatar:                  "false"
+resume_name:                    "Jaydyn T. Gadd"
+resume_title:                   "Student at the GitHub Scholar Program"
 resume_contact_email:
-  "homerjsimpson@youremailaddress.com"
-resume_header_contact_info: "742 Evergreen Terrace, Springfield | 555-7334 | homerjsimpson@youremailaddress.com"
+  "gjaydyn3@gmail.com.com"
+resume_header_contact_info: "2319 halflinger Cir, Georgia | 470-233-8795 | gjaydyn3@gmail.com.com"
 resume_header_intro: "<p>This is the executive summary. You should write a few brief, concise, and meaningful sentences about yourself from a professional context, and your immediate career goals. Make the length appropriate for your needs, but K.I.S.S.</p>"
 
 # use "yes" to display the email contact button,
