--- a/_data/skills.yml
+++ b/_data/skills.yml
@@ -9,4 +9,4 @@
 
 # Family leadership
 - skill: Family leadership
-  description: Bread winning, conflict resolution, couch inspection, TV longevity testing
+  description: Conflict resolution, couch inspection, TV longevity 
